sort.baseball.NaiveBaseball.scala.error
Compilation error:
NaiveBaseball:13: error: not found: value color1
      if (color1==FarColor){
          ^NaiveBaseball:13: error: not found: value FarColor
      if (color1==FarColor){
                  ^NaiveBaseball:14: error: not found: value i
        move(i,1)
             ^NaiveBaseball:17: error: not found: value i
        move(i,0)
             ^